[tool.poetry]
name = "locust-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
faker = "^27.0.0"
ipython = "^7.11.1"
locustio = "^0.13.5"
open-discussions-client = "^0.5.0"
praw = "4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
